5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4123/executions/1724_2523.log
== TEST (2019-05-14 11:06:58) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
nn = 1
nv = 0
i = 0
while i<n:
	a[nn] = (a[nv] + b[nv])*2
	b[nn] = (a[nv]*b[nv])**2
	t[nn] = t[nv] - p[nv]*(a[nv]-a[nn])**2
	p[nn] = 2*p[nv]
	pi = ((a[nn]+b[nn])**2)/4*t[nn]
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	i+=1
print(round(pi,14))
-- OUTPUT:
-3.5301725579937843e+22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:04) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
nn = 1
nv = 0
i = 0
while i<n:
	a[nn] = (a[nv] + b[nv])*2
	b[nn] = (a[nv]*b[nv])**2
	t[nn] = t[nv] - p[nv]*(a[nv]-a[nn])**2
	p[nn] = 2*p[nv]
	pi = ((a[nn]+b[nn])**2)/4*t[nn]
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	i+=1
print(round(pi,14))
-- OUTPUT:
-3.5301725579937843e+22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:01) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
nn = 1
nv = 0
i = 1
while i<n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**2
	t[nn] = t[nv] - p[nv]*(a[nv]-a[nn])**2
	p[nn] = 2*p[nv]
	pi = ((a[nn]+b[nn])**2)/4*t[nn]
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	print(round(pi,14))
	i+=1

-- OUTPUT:
0.10468355419228
0.03062585164439
-0.00388578977788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:11) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
nn = 1
nv = 0
i = 1
while i<n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**2
	t[nn] = t[nv] - p[nv]*(a[nv]-a[nn])**2
	p[nn] = 2*p[nv]
	pi = ((a[nn]+b[nn])**2)/4*t[nn]
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	print(round(pi,14))
	i+=1

-- OUTPUT:
0.10468355419228
0.03062585164439
-0.00388578977788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:09:35) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
nn = 1
nv = 0
i = 1
while i<n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**2
	t[nn] = t[nv] - p[nv]*(a[nv]-a[nn])**2
	p[nn] = 2*p[nv]
	pi = ((a[nv]+b[nv])**2)/4*t[nv]
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	print(round(pi,14))
	i+=1

-- OUTPUT:
0.18213834764832
0.10468355419228
0.03062585164439
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:10:55) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
pi[0,0]
nn = 1
nv = 0
i = 1
while i<n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**2
	t[nn] = t[nv] - p[nv]*(a[nv]-a[nn])**2
	p[nn] = 2*p[nv]
	pi[nn] = ((a[nv]+b[nv])**2)/4*t[nv]
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	pi[nv] = pi[nn]
	print(round(pi,14))
	i+=1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    pi[0,0]
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:11:05) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
pi = [0,0]
nn = 1
nv = 0
i = 1
while i<n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**2
	t[nn] = t[nv] - p[nv]*(a[nv]-a[nn])**2
	p[nn] = 2*p[nv]
	pi[nn] = ((a[nv]+b[nv])**2)/4*t[nv]
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	pi[nv] = pi[nn]
	print(round(pi,14))
	i+=1

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    print(round(pi,14))
TypeError: type list doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:11:20) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
pi = [0,0]
nn = 1
nv = 0
i = 1
while i<n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**2
	t[nn] = t[nv] - p[nv]*(a[nv]-a[nn])**2
	p[nn] = 2*p[nv]
	pi[nn] = ((a[nv]+b[nv])**2)/4*t[nv]
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	pi[nv] = pi[nn]
	print(round(pi[nn],14))
	i+=1

-- OUTPUT:
0.18213834764832
0.10468355419228
0.03062585164439
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:12:08) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
pi = [0,0]
nn = 1
nv = 0
i = 1
while i<n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**0.5
	t[nn] = t[nv] - p[nv]*(a[nv]-a[nn])**2
	p[nn] = 2*p[nv]
	pi[nn] = ((a[nv]+b[nv])**2)/4*t[nv]
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	pi[nv] = pi[nn]
	print(round(pi[nn],14))
	i+=1

-- OUTPUT:
0.18213834764832
0.16405334649243
0.16399127667884
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:13:33) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
pi = [0,0]
nn = 1
nv = 0
i = 1
while i<n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**0.5
	t[nn] = t[nv] - p[nv]*((a[nv]-a[nn])**2)
	p[nn] = 2*p[nv]
	pi[nn] = ((a[nv]+b[nv])**2)/(4*t[nv])
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	pi[nv] = pi[nn]
	print(round(pi[nn],14))
	i+=1

-- OUTPUT:
2.91421356237309
3.14057925052217
3.14159264621354
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:13:39) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
pi = [0,0]
nn = 1
nv = 0
i = 1
while i<n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**0.5
	t[nn] = t[nv] - p[nv]*((a[nv]-a[nn])**2)
	p[nn] = 2*p[nv]
	pi[nn] = ((a[nv]+b[nv])**2)/(4*t[nv])
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	pi[nv] = pi[nn]
	print(round(pi[nn],14))
	i+=1

-- EXECUTION TIME:
0.174162
-- TEST CASE 1:
---- input:
4
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
-- TEST CASE 2:
---- input:
3
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
---- user output:
2.91421356237309
3.14057925052217
-- TEST CASE 3:
---- input:
2
---- correct output:
2.91421356237309
3.14057925052217
---- user output:
2.91421356237309
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:13:44) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
pi = [0,0]
nn = 1
nv = 0
i = 1
while i<n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**0.5
	t[nn] = t[nv] - p[nv]*((a[nv]-a[nn])**2)
	p[nn] = 2*p[nv]
	pi[nn] = ((a[nv]+b[nv])**2)/(4*t[nv])
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	pi[nv] = pi[nn]
	print(round(pi[nn],14))
	i+=1

-- OUTPUT:
2.91421356237309
3.14057925052217
3.14159264621354
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:14:00) 
-- CODE:
n = int(input())
a = [1,0]
b = [1/2**0.5,0]
t = [0.25,0]
p = [1,0]
pi = [0,0]
nn = 1
nv = 0
i = 1
while i<=n:
	a[nn] = (a[nv] + b[nv])/2
	b[nn] = (a[nv]*b[nv])**0.5
	t[nn] = t[nv] - p[nv]*((a[nv]-a[nn])**2)
	p[nn] = 2*p[nv]
	pi[nn] = ((a[nv]+b[nv])**2)/(4*t[nv])
	a[nv] = a[nn]
	b[nv] = b[nn]
	t[nv] = t[nn]
	p[nv] = p[nn]
	pi[nv] = pi[nn]
	print(round(pi[nn],14))
	i+=1

-- EXECUTION TIME:
0.135778
-- TEST CASE 1:
---- input:
4
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
3.14159265358979
-- TEST CASE 2:
---- input:
3
---- correct output:
2.91421356237309
3.14057925052217
3.14159264621354
---- user output:
2.91421356237309
3.14057925052217
3.14159264621354
-- TEST CASE 3:
---- input:
2
---- correct output:
2.91421356237309
3.14057925052217
---- user output:
2.91421356237309
3.14057925052217
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
